--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,7 @@
   }
 
   button {
-    @apply p-2 rounded-lg bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 font-semibold text-lg
+    @apply p-2 rounded-lg bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 font-semibold text-lg size-fit
   }
 
   textarea {
